@@ -19,6 +19,7 @@ export(Isosim)
 export(QueryGNIP)
 export(RElevate)
 export(calibfit)
+export(create_aliens)
 export(getelev)
 export(getprecip)
 export(isofind)
