@@ -15,6 +15,7 @@
 \section{version 0.6}{
   \subsection{New features}{
       \itemize{
+        \item new function create_aliens() allowing for the simulation of orgnanism data
         \item it is now possible to control the colours and labels for the levels of isotopes or p-values in plots
         \item it is now possible to create the so-called annual averaged precipitation isoscapes!
         \item queryGNIP can now split the dataset per month or year at each location during the aggregation
